--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>320</y>
+      <y>350</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>320</y>
+      <y>350</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -44,9 +44,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>50</y>
+      <y>100</y>
       <width>751</width>
-      <height>141</height>
+      <height>121</height>
      </rect>
     </property>
    </widget>
@@ -54,17 +54,17 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>260</y>
+      <y>290</y>
       <width>741</width>
       <height>23</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="text_label">
+   <widget class="QLabel" name="input_label">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
+      <y>70</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -75,14 +75,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Text</string>
+     <string>Input</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>230</y>
+      <y>260</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -100,9 +100,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>390</y>
+      <y>420</y>
       <width>751</width>
-      <height>141</height>
+      <height>111</height>
      </rect>
     </property>
    </widget>
@@ -110,7 +110,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>360</y>
+      <y>390</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -128,7 +128,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>290</y>
+      <y>320</y>
       <width>741</width>
       <height>16</height>
      </rect>
@@ -141,7 +141,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>200</y>
+      <y>230</y>
       <width>741</width>
       <height>16</height>
      </rect>
@@ -149,6 +149,26 @@
     <property name="text">
      <string>error</string>
     </property>
+   </widget>
+   <widget class="QComboBox" name="input_comboBox">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>70</y>
+      <width>79</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Text</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Hex</string>
+     </property>
+    </item>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
